[package]
name = "day-22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.7", features = ["rayon"] }
nom = "7.1.3"
rayon = "1.8.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
