[package]
name = "day-24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
nom = "7.1.3"
ndarray-linalg = { version = "0.16", features = ["intel-mkl"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
glam = "0.25.0"
itertools = "0.12.0"
